<resources>
    <string name="app_name">AppOderFood</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="socmnd">Số chứng minh nhân dân</string>
    <string name="dangky">Đăng ký</string>
    <string name="thoat">Thoát</string>
    <string name="nhaptendangnhap">Nhập tên đang nhập</string>
    <string name="nhapmatkhau">Nhập mật khẩu</string>
    <string name="nhapdumatkhau">Nhật mật khẩu</string>
    <string name="themthanhcong">Đăng ký thành công</string>
    <string name="themthatbai">Đăng ký thất bại</string>
    <string name="dangnhap">Đăng Nhập</string>
    <string name="saitendangnhaphoacmatkhau">Sai tên đăng nhập hoặc mật khẩu</string>
    <string name="quaylai">Quay lại</string>
    <string name="open_navigation">Open</string>
    <string name="close_navigation">Close</string>
    <string name="themthucdon">Thêm thực đơn</string>
    <string name="tenmonan">Tên món ăn</string>
    <string name="gia">Giá món ăn</string>
    <string name="buttondongy">Đồng ý</string>
    <string name="buttonthoat">Thoát</string>
    <string name="home">Trang chủ</string>
    <string name="thucdon">Thực đơn</string>
    <string name="nhanvien">Nhân viên</string>
    <string name="thongke">Thống kê</string>
    <string name="caidat">Cài đặt</string>
    <string name="themloaimonan">Thêm loại món ăn</string>
    <string name="themsoluongmonan">Đồng ý thêm số lượng</string>

</resources>
