<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_backgroud"
    android:layout_height="match_parent"
    tools:context=".DangNhapActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:textSize="30dp"
        android:padding="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorTextView"
        android:text="@string/dangnhap"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edTenDangNhap2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColorHint="@color/colorTextHint"
        android:hint="@string/tendangnhap"
        android:layout_margin="15dp"
        android:textColor="@color/colorTextEditText" />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edMạKhau2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColorHint="@color/colorTextHint"
            android:hint="@string/tendangnhap"
            android:layout_margin="15dp"
            android:textColor="@color/colorTextEditText"
            android:inputType="textPassword"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnDangNHap"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:text="@string/dangnhap"
            android:background="@drawable/custom_button"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            android:text="@string/dangky"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:id="@+id/btnDangKy2"
            android:padding="10dp"
            android:background="@drawable/custom_button"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>